--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -934,12 +934,11 @@
 
     <string name="confirmation_remove_chat_contact" context="confirmation message before removing a contact from a chat.">Remove the contact %s from this chat?</string>
 
-    <string name="observer_permission_label_participants_panel" context="Label to show the participant permission in the options panel of the group info screen">Observer</string>
+    <string name="observer_permission_label_participants_panel" context="Label to show the participant permission in the options panel of the group info screen">Read-only</string>
     <string name="member_permission_label_participants_panel" context="Label to show the participant permission in the options panel of the group info screen">Member</string>
     <string name="standard_permission_label_participants_panel" context="Label to show the participant permission in the options panel of the group info screen">Standard</string>
     <string name="administrator_permission_label_participants_panel" context="Label to show the participant permission in the options panel of the group info screen">Moderator</string>
 
-    <string name="change_title_messages" context="Message shown when a participant change the title of a group chat.">changed the group chat name to</string>
     <string name="edited_message_text" context="Text appended to a edited message.">(edited)</string>
     <string name="change_title_option" context="Option in menu to change title of a chat group.">Change title</string>
 
@@ -960,6 +959,10 @@
     <string name="number_no_add_participant_request" context="error message when inviting multiple contacts to a group chat">%1$d participants were successfully invited but %2$d participants were not invited.</string>
 
     <string name="message_permissions_changed" context="chat message when the permissions for a user has been changed"><![CDATA[was changed to <b>%1$s</b> by <font color=\'#00BFA5\'>%2$s</font>]]></string>
-    <string name="message_add_participant" context="chat message when a participant was added to a group chat"><![CDATA[joined the group chat by invitation from <font color=\'#00BFA5\'>%1$s</font>]]></string>
-    <string name="message_remove_participant" context="chat message when a particpant was removed from a group chat"><![CDATA[was removed from group chat by <font color=\'#00BFA5\'>%1$s</font>]]></string>
+    <string name="message_add_participant" formatted="false" context="chat message when a participant was added to a group chat"><![CDATA[<font color=\'#00BFA5\'>%1$s</font><br/>was added to this group chat by invitation from <font color=\'#00BFA5\'>%2$s</font>]]></string>
+    <string name="message_remove_participant" context="chat message when a participant was removed from a group chat"><![CDATA[was removed from group chat by <font color=\'#00BFA5\'>%1$s</font>]]></string>
+
+    <string name="change_title_messages" context="Message shown when a participant change the title of a group chat."><![CDATA[changed the group chat name to <font color=\'#00BFA5\'>%1$s</font>]]></string>
+
+    <string name="message_participant_left_group_chat" context="chat message when a participant left a group chat"><b>left</b> the group chat</string>
 </resources>
