--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -880,6 +880,7 @@
     <string name="number_no_invite_contact_request" context="error message when reinviting multiple contacts">%1$d invite requests successfully sent but %2$d requests were not sent.</string>
 
     <string name="chat_me_text" context="Word next to own user's message in chat screen">Me</string>
+    <string name="chat_I_text" context="Word next to own user's message in chat message">I</string>
     <string name="type_message_hint" context="Hint shown in the field to write a message in the chat screen">Type a message</string>
 
     <string name="general_mute" context="button">Mute</string>
@@ -959,10 +960,10 @@
     <string name="number_no_add_participant_request" context="error message when inviting multiple contacts to a group chat">%1$d participants were successfully invited but %2$d participants were not invited.</string>
 
     <string name="message_permissions_changed" context="chat message when the permissions for a user has been changed"><![CDATA[was changed to <b>%1$s</b> by <font color=\'#00BFA5\'>%2$s</font>]]></string>
-    <string name="message_add_participant" formatted="false" context="chat message when a participant was added to a group chat"><![CDATA[<font color=\'#00BFA5\'>%1$s</font><br/>was added to this group chat by invitation from <font color=\'#00BFA5\'>%2$s</font>]]></string>
-    <string name="message_remove_participant" context="chat message when a participant was removed from a group chat"><![CDATA[was removed from group chat by <font color=\'#00BFA5\'>%1$s</font>]]></string>
+    <string name="message_add_participant" formatted="false" context="chat message when a participant was added to a group chat"><![CDATA[<font color=\'#00BFA5\'>%1$s</font> was added to this group chat by invitation from <font color=\'#00BFA5\'>%2$s</font>]]></string>
+    <string name="message_remove_participant" context="chat message when a participant was removed from a group chat"><![CDATA[<font color=\'#00BFA5\'>%1$s</font> was removed from group chat by <font color=\'#00BFA5\'>%2$s</font>]]></string>
 
-    <string name="change_title_messages" context="Message shown when a participant change the title of a group chat."><![CDATA[changed the group chat name to <font color=\'#00BFA5\'>%1$s</font>]]></string>
+    <string name="change_title_messages" context="Message shown when a participant change the title of a group chat."><![CDATA[<font color=\'#00BFA5\'>%1$s</font> changed the group chat name to <font color=\'#00BFA5\'>%2$s</font>]]></string>
 
-    <string name="message_participant_left_group_chat" context="chat message when a participant left a group chat"><b>left</b> the group chat</string>
+    <string name="message_participant_left_group_chat" context="chat message when a participant left a group chat"><![CDATA[<font color=\'#00BFA5\'>%1$s</font> <b>left</b> the group chat]]></string>
 </resources>
