--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -924,7 +924,7 @@
     <string name="confirmation_delete_several_messages" context="Confirmation before deleting messages">Delete messages?</string>
     <string name="confirmation_delete_one_message" context="Confirmation before deleting one message">Delete message?</string>
 
-    <string name="text_cleared_history" context="Text shown when a user cleared the history of a chat">cleared the chat history.</string>
+    <string name="text_cleared_history" context="Text shown when a user cleared the history of a chat"><![CDATA[<font color=\'#00BFA5\'>%1$s</font> cleared the chat history]]></string>
 
     <string name="group_chat_label" context="Label for the sliding panel of a group chat">Group chat</string>
     <string name="group_chat_info_label" context="Label for the option of the sliding panel to show the info of a chat group">Group info</string>
@@ -959,7 +959,7 @@
     <string name="number_correctly_add_participant" context="success message when inviting multiple contacts to a group chat">%d participants were correctly invited</string>
     <string name="number_no_add_participant_request" context="error message when inviting multiple contacts to a group chat">%1$d participants were successfully invited but %2$d participants were not invited.</string>
 
-    <string name="message_permissions_changed" context="chat message when the permissions for a user has been changed"><![CDATA[was changed to <b>%1$s</b> by <font color=\'#00BFA5\'>%2$s</font>]]></string>
+    <string name="message_permissions_changed" context="chat message when the permissions for a user has been changed"><![CDATA[<font color=\'#00BFA5\'>%1$s</font> was changed to <b>%2$s</b> by <font color=\'#00BFA5\'>%3$s</font>]]></string>
     <string name="message_add_participant" formatted="false" context="chat message when a participant was added to a group chat"><![CDATA[<font color=\'#00BFA5\'>%1$s</font> was added to this group chat by invitation from <font color=\'#00BFA5\'>%2$s</font>]]></string>
     <string name="message_remove_participant" context="chat message when a participant was removed from a group chat"><![CDATA[<font color=\'#00BFA5\'>%1$s</font> was removed from group chat by <font color=\'#00BFA5\'>%2$s</font>]]></string>
 
