--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -971,6 +971,8 @@
 
     <string name="settings_chat_on" context="settings of the chat">Enable chat</string>
     <string name="settings_chat_off" context="settings of the chat">Disable chat</string>
+    <string name="settings_summary_chat_off" context="settings of the chat">You will be offline.</string>
+    <string name="settings_summary_chat_on" context="settings of the chat">You will be online.</string>
 
     <string name="settings_chat_status" context="settings of the chat to choose the status">Status</string>
     <string name="settings_chat_status_online" context="settings of the chat to choose the status online">Online</string>
