--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -995,4 +995,18 @@
 
     <string name="list_message_deleted" context="Text show in list of chats when the last message has been deleted">Message deleted</string>
 
+    <string name="non_format_text_deleted_message_by" context="Text shown when a message has been deleted in the chat">This message has been deleted by %1$s</string>
+    <string name="non_format_history_cleared_by" context="Text shown when the chat history was cleared by someone">Chat history cleared by %1$s</string>
+
+    <string name="non_format_text_cleared_history" context="Text shown when a user cleared the history of a chat">%1$s cleared the chat history</string>
+    <string name="non_format_message_permissions_changed" context="chat message when the permissions for a user has been changed">%1$s was changed to %2$s by %3$s</string>
+    <string name="non_format_message_add_participant" formatted="false" context="chat message when a participant was added to a group chat">%1$s was added to this group chat by invitation from %2$s</string>
+    <string name="non_format_message_remove_participant" context="chat message when a participant was removed from a group chat">%1$s was removed from group chat by %2$s</string>
+
+    <string name="non_format_change_title_messages" context="Message shown when a participant change the title of a group chat.">%1$s changed the group chat name to \"%2$s\"</string>
+
+    <string name="non_format_message_participant_left_group_chat" context="chat message when a participant left a group chat">%1$s left the group chat</string>
+
+    <string name="messages_copied_clipboard" context="success alert when the user copy some messages to the clipboard">Copied to the clipboard</string>
+
 </resources>
