--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -836,4 +836,18 @@
     <string name="cancel_link_expired" context="Message when the user tries to open a cancel link and it has expired">El enlace para cancelar la cuenta ha caducado, por favor, solicita uno nuevo.</string>
 
     <string name="no_results_found" context="Text shown after searching and no results found">No se encontraron resultados</string>
+
+    <string name="error_sharing_folder" context="Message shown when the folder sharing process fails">Error al compartir la carpeta. Por favor, inténtalo otra vez.</string>
+
+    <string name="incoming_shares_label" context="title of the section that shows all the incoming shared items">Comparticiones entrantes</string>
+
+    <plurals name="confirmation_remove_contact" context="confirmation message before removing a contact">
+        <item context="Singular" quantity="one">Todos los datos asociados al contacto seleccionado se eliminarán.</item>
+        <item context="Plural" quantity="other">Todos los datos asociados a los contactos seleccionados se eliminarán.</item>
+    </plurals>
+
+    <plurals name="title_confirmation_remove_contact" context="title of confirmation alert before removing a contact">
+        <item context="Singular" quantity="one">Eliminar contacto?</item>
+        <item context="Plural" quantity="other">Eliminar contactos?</item>
+    </plurals>
 </resources>
