Bug #6043: Message "No conversation history" changes its color to green

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1042,4 +1042,6 @@
 
     <string name="title_message_not_sent_options" context="title of the menu for a non sent message">Message not sent</string>
 
+    <string name="no_conversation_history" context="message shown when a chat has no messages">No conversation history</string>
+
 </resources>
