--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     
     <string name="confirmation_alert" context="confirmation message before removing a file">Please confirm</string>
 
-    <string name="delete_account" context="Button in My Account section where the user can delete permanently his account">Delete account</string>
+    <string name="delete_account" context="Button in My Account section where the user can delete permanently his account">Cancel your account</string>
     <string name="action_logout" context="Button where the user can sign off or logout">Logout</string>
     <string name="action_add" context="Menu item">Upload</string>
     <string name="action_create_folder" context="Menu item">Create new folder</string>
@@ -852,4 +852,7 @@
         <item context="Singular" quantity="one">Remove contact?</item>
         <item context="Plural" quantity="other">Remove contacts?</item>
     </plurals>
+
+    <string name="tab_my_account_general" context="Title of the general tab in My Account Section">General</string>
+    <string name="tab_my_account_storage" context="Title of the storage tab in My Account Section">Storage</string>
 </resources>
