--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name" context="Not translate">MEGA</string>
-    <string name="app_version" context="Not translate">3.1.alfa.3</string>
+    <string name="app_version" context="Not translate">3.1.alpha.3</string>
     <string name="sdk_version" context="Not translate">e6ae492</string>
     <string name="karere_version" context="Not translate">94f0ea1</string>
     
