--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -875,7 +875,7 @@
 
     <string name="error_sharing_folder" context="Message shown when the folder sharing process fails">Error al compartir la carpeta. Por favor, inténtalo otra vez.</string>
 
-    <string name="incoming_shares_label" context="title of the section that shows all the incoming shared items">Comparticiones entrantes</string>
+    <string name="incoming_shares_label" context="title of the section that shows all the incoming shared items">Compartido contigo</string>
 
     <plurals name="confirmation_remove_contact" context="confirmation message before removing a contact">
         <item context="Singular" quantity="one">Todos los datos asociados al contacto seleccionado se eliminarán.</item>
