--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -866,4 +866,6 @@
     <string name="no_bylling_cycle" context="Label in section the storage tab when the account is Free">No billing cycle</string>
 
     <string name="my_account_of_string" context="String to show the transfer quota and the used space in My Account section"><![CDATA[%1$s <font color=\'#777777\'>of %2$s</font>]]></string>
+
+    <string name="confirmation_delete_from_save_for_offline" context="confirmation message before removing a something for the Save for Offline section">Remove from Save for Offline?</string>
 </resources>
