--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -658,11 +658,11 @@
     <string name="four_pin_lock" context="PIN with 4 digits">4 digits PIN</string>
     <string name="six_pin_lock" context="PIN with 6 digits">6 digits PIN</string>
     <string name="AN_pin_lock" context="PIN alphanumeric">Alphanumeric PIN</string>
-    <string name="fingerprint_or_AN_pin_lock" context="Fingerprint or PIN alphanumeric">fingerprint or Alphanumeric PIN</string>
-    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
-    <string name="fingerprint_success">Fingerprint recognized</string>
-    <string name="fingerprint_description">Confirm fingerprint to continue</string>
-    <string name="fingerprint_hint">Touch sensor</string>
+    <string name="fingerprint_or_AN_pin_lock" context="Fingerprint or PIN alphanumeric option">Fingerprint | Alphanumeric code</string>
+    <string name="fingerprint_not_recognized" context="Fingerprint not recognized">Fingerprint not recognized. Try again</string>
+    <string name="fingerprint_success" context="Fingerprint recognized">Fingerprint recognized</string>
+    <string name="fingerprint_description" context="Confirm fingerprint to continue">Confirm fingerprint to continue</string>
+    <string name="fingerprint_hint" context="Hint touch sensor">Touch sensor</string>
     <string name="fingerprint_dialog_title">Fingerprint authentication</string>
 
 
