--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -279,7 +279,7 @@
     <string name="context_manage_link_menu" context="Item menu option upon right click on one or multiple files.">Get link</string>
     <string name="context_leave_menu" context="Item menu option upon right click on one or multiple files.">Leave</string>
     <string name="alert_leave_share" context="Title alert before leaving a share.">Leave share</string>
-    <string name="context_clean_shares_menu" context="Item menu option upon right click on one or multiple files.">Remove shares</string>
+    <string name="context_clean_shares_menu" context="Item menu option upon right click on one or multiple files.">Remove share</string>
     <string name="context_remove_link_menu" context="Item menu option upon right click on one or multiple files.">Remove link</string>
     <string name="context_remove_link_warning_text" context="Warning that appears prior to remove a link of a file.">This link will not be publicly available anymore.</string>
     <string name="context_rename" context="Item menu option upon right click on one or multiple files.">Rename</string>
@@ -800,7 +800,10 @@
         <item context="referring to a invitation request in the Contacts section" quantity="other">requests</item>
     </plurals>
 
-    <string name="confirmation_remove_outgoing_shares" context="Confirmation before removing the outgoing shares of a folder">Remove shares?</string>
+    <plurals name="confirmation_remove_outgoing_shares">
+        <item context="Confirmation before removing the outgoing shares of a folder" quantity="one">The folder is shared with %1$d contact. Remove share?</item>
+        <item context="Confirmation before removing the outgoing shares of a folder" quantity="other">The folder is shared with %1$d contacts. Remove all shares?</item>
+    </plurals>
 
     <string name="error_incorrect_email_or_password" context="Error message when the credentials to login are incorrect.">Invalid e-mail and/or password. Please try again.</string>
     <string name="error_account_suspended" context="Error message when trying to login and the account is suspended.">Your account have been suspended due to Terms of Service violations. Please contact to support@mega.co.nz</string>
